syntax = "proto3";

package shared.v1.activities.v1;

import "google/protobuf/any.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/shared/v1/activities/v1";

message PollWorkflowRequest {
  string namespace = 1 [
    (validate.rules).string = {
      in: [
        "apps",
        "deployments",
        "installs",
        "instances",
        "orgs"
      ]
    },
    (tagger.tags) = "faker:\"oneof: instances\""
  ];

  string workflow_name = 2 [(validate.rules).string.min_len = 5];
  string workflow_id = 3 [(validate.rules).string.min_len = 5];
}

message PollWorkflowResponse {
  google.protobuf.Any response = 2 [(validate.rules).any.required = true];
}
