syntax = "proto3";

package orgs.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";

message SignupRequest {
  string org_id = 1 [
    (validate.rules).string.uuid = true,
    (tagger.tags) = "faker:\"uuid_hyphenated\""
  ];
  string region = 2 [
    (validate.rules).string = {
      in: ["us-west-2"]
    },
    (tagger.tags) = "faker:\"oneof: us-west-2\""
  ];
}

message SignupResponse {
  string deployments_role_arn = 1 [(validate.rules).string.min_len = 20];

  string installations_role_arn = 2 [(validate.rules).string.min_len = 20];

  string odr_role_arn = 3 [(validate.rules).string.min_len = 20];

  string instances_role_arn = 4 [(validate.rules).string.min_len = 20];

  string installer_role_arn = 5 [(validate.rules).string.min_len = 20];

  string orgs_role_arn = 6 [(validate.rules).string.min_len = 20];
}
