syntax = "proto3";

package orgs.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";

message TeardownRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string region = 2 [
    (validate.rules).string = {
      in: ["us-west-2"]
    },
    (tagger.tags) = "faker:\"oneof: us-west-2\""
  ];
}

message TeardownResponse {}
